--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.7</version>
+        </dependency>
 
         <!-- Tests -->
         <dependency>
