--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -1,12 +1,26 @@
 app:
   scheduler:
     enable: true
-    interval: 10s
-    force-check-delay: 10s
+    interval: 10000
+    force-check-delay: 10000
+  database-access-type: jpa
 
 spring:
   application:
     name: scrapper
+    datasource:
+      url: jdbc:postgresql://localhost:5437/scrapper
+      username: postgres
+      password: postgres
+      driver-class-name: org.postgresql.Driver
+    jpa:
+      database-platform: org.hibernate.dialect.PostgreSQLDialect
+      hibernate:
+        ddl-auto: none
+      properties:
+        hibernate:
+          show_sql: true
+          format_sql: true
 
 springdoc:
   swagger-ui:
